<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="Eh_ErrorEntry_typ" Id="{e5f8aba5-7785-0212-0240-7e6debb9c5a4}">
    <Declaration><![CDATA[TYPE Eh_ErrorEntry_typ:
STRUCT
	SourceId		: UDINT;
	SubSourceId		: UDINT;
	ErrorId			: UDINT;
	ErrorText		: STRING(500);
	MotorEvents		: enumMotorEvents;	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>