<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="SercosDrive_Ctrl_Adr_typ" Id="{0eb05628-bbcf-43fc-9841-d7c74b4d3c2c}">
    <Declaration><![CDATA[TYPE SercosDrive_Ctrl_Adr_typ :
STRUCT
	//output
	ControlWord      : WORD;
	DriveError:       WORD;
	Diagnostic:       WORD;	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>